# TGSpeechBox

./: .gitignore  CMakeLists.txt  PRIVACY_POLICY.md  README-linux.md  Tuning.md  readme.md
.github/workflows/: build-android.yml
espeak-phonemizer/: CMakeLists.txt  notice.txt  synth_stubs.c
extras/speech-dispatcher/: tgsb-generic.conf  tgsb-speak
installer/: TGSpeechSapi.iss
nvdaAddon/: manifest.ini
nvdaAddon/locale/es/LC_MESSAGES/: nvda.mo  nvda.po
nvdaAddon/locale/hu/LC_MESSAGES/: nvda.mo  nvda.po
nvdaAddon/locale/pt_BR/LC_MESSAGES/: nvda.mo  nvda.po
nvdaAddon/synthDrivers/tgSpeechBox/: __init__.py  _frontend.py  audio.py  constants.py  espeak_bridge.py  espeak_direct.py  langPackSettingsPanel.py  lang_pack_settings.py  speechPlayer.py  speech_pipeline.py  text_utils.py  voice_management.py  voicing_tone.py
packs/: phonemes.yaml
packs/dict/: en-compounds.tsv  en-gb-stress.tsv  en-us-stress.tsv
packs/lang/: de.yaml  en-au.yaml  en-ca.yaml  en-gb.yaml  en-us.yaml  en.yaml  es-es.yaml  es.yaml  hu.yaml  pl.yaml  tr.yaml
src/: dspCommon.h  formantGenerator.h  frame.cpp  speechPlayer.cpp  speechPlayer.h  speechWaveGenerator.cpp  speechWaveGenerator.h  voiceGenerator.h  voicingTone.h
src/frontend/: frame_emit.cpp  ipa_engine.cpp  ipa_engine.h  nvspFrontend.cpp  nvspFrontend.h  pack.cpp  pack.h  text_parser.cpp  text_parser.h  voice_profile.cpp  voice_profile.h  yaml_min.cpp  yaml_min.h
src/frontend/passes/: allophones.cpp  boundary_smoothing.cpp  diphthong_collapse.cpp  pitch_fujisaki.cpp  pitch_impulse.cpp  pitch_impulse.h  prominence.cpp  rate_compensation.cpp
src/sapi/: ISpTTSEngineImpl.cpp  tgsb_runtime.cpp  tgsb_runtime.hpp
tgsb-static/: CMakeLists.txt
tools/: formant_trajectory.py  frame_inspector.py  lang_pack.py  tgsbRender.cpp
tools/tgsbPhonemeEditorWin32/: CMakeLists.txt  RulesEditor.cpp  appcontroller.cpp  resource.h  resources.rc  tgsb_runtime.cpp  yaml_edit.cpp  yaml_edit.h
